# Wiki

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs_deploy.yml
climate_models/: index.html
climate_models/cesm/: index.html
climate_models/cesm/basics/: index.html
climate_models/cesm/first_run/: index.html
climate_models/cesm/installation/: index.html
climate_models/isca/: index.html
climdyn_tools/ceda_esgf/: base.py
climdyn_tools/cesm/: load.py
climdyn_tools/era5/get_jasmin_era5/: README.md  core.py  utils.py
climdyn_tools/utils/: __init__.py  base.py  ds_slicing.py
code/: index.html
code/ceda_esgf/base/: index.html
code/cesm/load/: index.html
code/era5/get_jasmin_era5/: index.html
code/utils/base/: index.html
code/utils/ds_slicing/: index.html
code/utils/xarray/: index.html
contributing/: index.html
contributing/mkdocs/: index.html
data/: index.html
data/cesm/: index.html
data/cmip/: index.html
data/cmip/CEDAESGF_Wrapper/: CEDAESGF_Wrapper.ipynb  index.html
data/era5/: index.html
docs/: index.md
docs/climate_models/: index.md
docs/climate_models/cesm/: basics.md  (+3 more)
docs/code/: index.md
docs/contributing/: index.md  mkdocs.md
docs/data/: index.md
docs/hpc_basics/: archer2.md  hypatia.md  index.md  jasmin.md  shell_scripting.md  slurm.md
docs/software/: ide.md  index.md  python.md
hpc_basics/: index.html
hpc_basics/archer2/: index.html
hpc_basics/hypatia/: index.html
hpc_basics/jasmin/: index.html
hpc_basics/shell_scripting/: index.html
hpc_basics/slurm/: index.html
overrides/: home.html
search/: search_index.json
software/: index.html
software/ide/: index.html
software/python/: index.html
(+14 files in other folders)
