[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-dynamics-lab-tools"
version = "1.0.0"
description = "Useful tools for the climate dynamics lab at St Andrews"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Josh Duffield", email = "jamd1@st-andrews.ac.uk" }
]

# Install below through pip install .
dependencies = [
  "xarray",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
docs = ["mkdocs", "mkdocs-material", "mkdocs-jupyter", "mkdocstrings-python"]      # install with pip install ".[docs]"
dev = ["pytest", "flake8"]                                  # install with pip install ".[dev]"